# betting_software_test_assignment

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: c152ea2f2e95_.py
src/database/: settings.py
src/models/: bets.py
src/settings/: env_settings.py
src/views/bets/: logic.py  schemas.py
tests/: conftest.py
tests/e2e/: test_bets_e2e.py
tests/fixtures/: __init__.py  bets.py
tests/integration/: test_bet.py  test_bets.py
