[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend_api"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.2"
fastapi = "^0.103.1"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"
sqlalchemy = "^2.0.21"
python-decouple = "^3.8"
alembic = "^1.12.0"
testcontainers = "^3.7.1"
psycopg2 = "^2.9.7"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
